--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     image: ail-framework:latest
     container_name: ail-framework
-    command: /bin/bash
+    command: -l
     tty: true
     volumes:
       - ./Volumes/CRAWLED_SCREENSHOT/:/opt/ail-framework/CRAWLED_SCREENSHOT
